fix navbar container alignment

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ body {
 }
 
 .nav {
-	margin-left: 50px;
 	justify-content: space-evenly;
 	font-size: 25px;
 }
